# COP4520-Parallel-Edge-Detection-Project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Testing.ipynb  changeOnwerShipOfAllFIles.bash  docker-compose.yml  entrypoint.bash  main.cpp  sobel  sobel.cpp  test.cpp  thread_ids.txt  time.txt
headers/: Convolution.hpp  Counter.hpp  MultithreadedSobel.hpp  MultithreadedSobel_V1.hpp  MultithreadedSobel_V2.hpp  convolution.hpp  localUtil.hpp
output_txt/: input_Image.txt  magnitude.txt  padded.txt  yoooo.txt
src_files/: Convolution.cpp  Counter.cpp  MultithreadedSobel.cpp  MultithreadedSobel_V1.cpp  MultithreadedSobel_V2.cpp  convolution.cpp  localUtil.cpp
